vue.js import with cdn

--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="homepage-style.css">
     <script type="module" src="./homepage.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
     <h1>Welcome to the Homepage</h1>
